Fixed: Close button visible
Fixes #14

--- a/frontend/public/css/styles.scss
+++ b/frontend/public/css/styles.scss
@@ -599,6 +599,14 @@ html.js {
     background: desaturate(lighten($brand-warning, 10%), 10%);
 }
 
+.close {
+    color: #000000;
+
+    :hover {
+        color: $brand-primary;
+    }
+}
+
 .glyph-image-container {
     float: left;
 }
